test/fixtures/basic/app/pages/invalid-root/4.vue
<template>
  <div>Fine</div>
</template>

<script setup>
definePageMeta({ layout: 'invalid-root' })
</script>
